# LearnCMake

./: README.md
ERROR-403-Solution/: web.txt
Step-1/A Basic Starting Point/: CMakeLists.txt  tutorial.cxx
Step-1/Adding a Version Number/: TutorialConfig.h.in  tutorial.cxx
Step-2/Adding a Library/: CMakeLists.txt  tutorial.cxx
Step-2/Adding a Library 2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Step-2/Adding a Library 2/MathFunctions/: CMakeLists.txt  mul.cxx  mul.h  mymath.h
Step-2/Adding a Library/MathFunctions/: CMakeLists.txt  sqrt.cxx
